# hsc3-jiffy

./: .travis.yml  LICENSE  README.md  hsc3-jiffy.cabal  stack-travis.yaml
exec/: bench-graphs.hs  dump-graph.hs
src/Sound/SC3/: Jiffy.hs
src/Sound/SC3/Jiffy/: Compat.hs  DumpUGens.hs  Encode.hs  Orphan.hs
src/Sound/SC3/Jiffy/UGen/: Builder.hs  DB.hs  Orphan.hs  TH.hs
src/Sound/SC3/UGen/: Jiffy.hs
src/Sound/SC3/UGen/Jiffy/: Bindings.hs  Builder.hs  Composite.hs  DB.hs  Dump.hs  TH.hs
src/Sound/SC3/UGen/Jiffy/Bindings/: Composite.hs  DB.hs  Generated.hs  Handwritten.hs  TH.hs
src/Sound/SC3/UGen/Jiffy/Builder/: Convert.hs  GraphM.hs  Internal.hs
test/: AudibleTests.hs  BuilderTests.hs  ConvertTests.hs  Hsc3Tests.hs  Main.hs  spec.hs
